<resources>
    <string name="app_name">众烁云仓HD</string>
    <string name="frag_top">产品库</string>
    <string name="frag_product">场景库</string>
    <string name="frag_select">方案库</string>
    <string name="frag_match">方案库</string>
    <string name="frag_cart">购物车</string>
    <string name="frag_mine">我的</string>
    <string name="phone_hint">请输入手机号码</string>
    <string name="phone_error">请输入正确的手机号码</string>
    <string name="back_desktop">再按一次退出系统</string>
    <string name="add_logistics">自定义物流</string>
    <string name="confirm_order">确认订单</string>
    <string name="my_logistics">我的物流</string>
    <string name="logistics_name">如：佛山物流</string>
    <string name="logistics_phone">接收方或转运站的联系电话(非必填)</string>
    <string name="logistics_address">请输入物流地址</string>
    <string name="UMUpdateNow">立即更新</string>
    <string name="UMNotNow">取消</string>
    <string name="down_waiting">正在下载最的更新包请稍后</string>
    <string name="download_cancel">下载取消</string>
    <string name="UMLatestVersion">已是最新版本</string>
    <string name="save">保存</string>
    <string name="all_title">全部</string>
    <string name="my_order">我的订单</string>
    <string name="my_collet">我的收藏</string>
    <string name="go_collet">收藏</string>
    <string name="receive_address">管理收货地址</string>
    <string name="now_version">当前版本</string>
    <string name="stream_address">管理物流地址</string>
    <string name="message">消息中心</string>
    <string name="share_app">分享给好友</string>
    <string name="name">用户名</string>
    <string name="sex">性别</string>
    <string name="birthday">生日</string>
    <string name="phone">手机号</string>
    <string name="telephone">固定电话</string>
    <string name="email">电子邮箱</string>
    <string name="update_password">密码修改</string>
    <string name="help">使用帮助</string>
    <string name="look_all_order">查看全部订单</string>
    <string name="payment">待付款</string>
    <string name="delivery">待发货</string>
    <string name="Receiving">待收货</string>
    <string name="mydata_setting">个人设置</string>
    <string name="setting">设置</string>
    <string name="cleancache">清理缓存</string>
    <string name="about">关于我们</string>
    <string name="all_money">实付总额</string>
    <string name="see_detail">查看详情</string>
    <string name="goods_detail">商品详情</string>
    <string name="head">头像</string>
    <string name="mobile_assert">请填写正确的手机号</string>
    <string name="server_error">数据异常</string>
    <string name="email_assert">请填写正确的邮箱</string>
    <string name="find_pwd_code">验证码:</string>
    <string name="digits_phone">0123456789</string>
    <string name="code_hint">请输入6位有效验证码</string>
    <string name="code_get">获取验证码</string>
    <string name="code_get_hint">%ss 后重试</string>
    <string name="timer_send_re">重新发送</string>
    <string name="timer_sending">发送中...</string>
    <string name="find_pwd_new">新密码:</string>
    <string name="pwd_new_hint">请输入新密码</string>
    <string name="find_pwd_affirm">确认密码:</string>
    <string name="login_pwd_affirm_hint">请输入确认密码</string>
    <string name="find_pwd_btn">立即找回</string>
    <string name="digits_numeric">0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ</string>
    <string name="digits_password">0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ@!.</string>
    <string name="consignee">收货人:</string>
    <string name="phone_num">电话:</string>
    <string name="address_city">所在地区:</string>
    <string name="address_detail">详细地址:</string>
    <string name="my_address">收货地址</string>
    <string name="my_address02">收货地址:</string>
    <string name="add_address">新增地址</string>
    <string name="update_address">修改地址</string>
    <string name="order_code">订单编号:</string>
    <string name="order_time">下单时间:</string>
    <string name="al_regiest">已注册</string>
    <string name="Invitation_code">邀请码</string>
    <string name="Invitation_code02">邀请码:</string>
    <string name="login">登录</string>
    <string name="out_login">退出系统</string>
    <string name="regiest">注册</string>
    <string name="find_pwd">找回密码</string>
    <string name="him_invite_code">请输入您的邀请码</string>
    <string name="him_title">请输入您的标题</string>
    <string name="him_product">请输入关键字</string>
    <string name="him_phone">输入手机号码或邮箱</string>
    <string name="isnull_accounts">帐号不能为空</string>
    <string name="isnull_phone">手机号码不能为空</string>
    <string name="isnull_pwd">密码不能为空</string>
    <string name="isnull_affirm_pwd">确认密码不能为空</string>
    <string name="isnull_invitation_code">邀请码不能为空</string>
    <string name="isnull_verification_code">验证码不能为空</string>
    <string name="compare_pwd_affirm">两次输入的密码不一致</string>
    <string name="regiest_code">手机快速注册</string>
    <string name="next">下一步</string>
    <string name="cotact_customer">客服电话</string>
    <string name="sure">确定</string>
    <string name="regiest_ok">注册成功</string>
    <string name="reset_ok">密码重置成功</string>
    <string name="lately_verification_code">离你最近的服务商家</string>
    <string name="telephone02">电话:</string>
    <string name="address">地址:</string>
    <string name="update_save">修改完成</string>
    <string name="edit">编辑</string>
    <string name="detele">删除</string>
    <string name="complete">完成</string>
    <string name="product">商品</string>
    <string name="detail">详情</string>
    <string name="parameter">参数</string>
    <string name="customer_service">客服</string>
    <string name="shopping_cart">购物车</string>
    <string name="go_shopping_cart">加入购物车</string>
    <string name="go_matching">马上配配看</string>
    <string name="number">数量</string>
    <string name="freight_rules">运费规则</string>
    <string name="contact_service">联系客服</string>
    <string name="popularity">人气</string>
    <string name="price">价格</string>
    <string name="new_goods">新品</string>
    <string name="sale">销售</string>
    <string name="all">全部</string>
    <string name="edit_click">点击编辑</string>
    <string name="scene_database">场景库</string>
    <string name="Photograph">照相</string>
    <string name="goPhotograph">拍照</string>
    <string name="go_cart_ok">已加入购物车</string>
    <string name="defaults_address">默认地址</string>
    <string name="convey_type">运输方式:</string>
    <string name="logistic_type">选择物流公司</string>
    <string name="sys_message">消息中心</string>
    <string name="sys_message_detail">消息内容</string>
    <string name="style_name">风格</string>
    <string name="splace_name">空间</string>
    <string name="lamp_scheme">配灯方案</string>
    <string name="add">新增</string>
    <string name="pay">付款</string>
    <string name="cancle_pay">取消订单</string>
    <string name="product_detail">产品详情</string>
    <string name="withdrawal" />
    <string name="cur_balance" />
    <string name="at_your_in_group">%s @ you in group chat</string>
    <string name="code_size">120</string>
    <string name="home_marign">40</string>
    <string name="home_marign2">120</string>
    <string name="home_marign_top">12</string>

    <string-array name="order_titles">
        <item>全部</item>
        <item>待付款</item>
        <item>待发货</item>
        <item>待收货</item>
        <item>已完成</item>
    </string-array>
    <string-array name="style">
        <item>全部</item>
        <item>现代简约</item>
        <item>欧式古典</item>
        <item>新古典</item>
        <item>中式</item>
        <item>新中式</item>
        <item>混搭</item>
        <item>小美式风格</item>
        <item>古典美式风格</item>
        <item>地中海</item>
        <item>东南亚</item>
        <item>日式</item>
        <item>北欧</item>
        <item>法式</item>
        <item>简约风格</item>
        <item>简欧风格</item>
        <item>其他</item>
    </string-array>
    <string-array name="space">
        <item>全部</item>
        <item>玄关</item>
        <item>客厅</item>
        <item>餐厅</item>
        <item>主卧室</item>
        <item>次卧室</item>
        <item>书房</item>
        <item>儿童房</item>
        <item>过厅</item>
        <item>过道</item>
        <item>厨房</item>
        <item>走入式衣柜</item>
        <item>卫生间</item>
        <item>休闲空间</item>
        <item>保姆房</item>
        <item>阳台</item>
        <item>车库</item>
        <item>其他</item>
    </string-array>
</resources>
