<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:background="@color/colorPrimaryRed"
        android:gravity="center">
        <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:src="@drawable/bg_default"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@color/background_color"
        android:visibility="gone">
        <TextView
            android:id="@+id/typeTv"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:textColor="@color/green"
            android:text="@string/al_regiest"
            android:textSize="20dp" />
        <TextView
            android:id="@+id/type02Tv"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:textColor="@color/fontColor2"
            android:text="@string/Invitation_code"
            android:textSize="20dp" />
    </LinearLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="@color/white"
        android:focusable="true"
        android:focusableInTouchMode="true">

        <ImageView
            android:id="@+id/phone_iv"
            style="@style/txtDefaultStyle"
            android:layout_width="80dp"
            android:layout_height="70dp"
            android:layout_centerVertical="true"
            android:src="@drawable/wode"/>

        <EditText
            android:id="@+id/phone_et"
            style="@style/editloginStyle"

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_toRightOf="@id/phone_iv"
            android:hint="@string/him_phone"
            android:textColorHint="@color/fontColorEO"
            android:inputType="text"
            android:background="@null"/>
    </RelativeLayout>
    <View
        style="@style/view_style"
        />
    <RelativeLayout
        android:id="@+id/pwd_rl"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="@color/white"
        >

        <ImageView
            android:id="@+id/pwd_iv"
            style="@style/txtDefaultStyle"
            android:layout_width="80dp"
            android:layout_height="70dp"
            android:layout_centerVertical="true"
            android:src="@drawable/pwd"/>

        <EditText
            android:id="@+id/pwd_et"
            style="@style/editloginStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:inputType="textPassword"
            android:digits="@string/digits_password"
            android:layout_toRightOf="@id/pwd_iv"
            android:hint="输入您的密码"
            android:textColorHint="@color/fontColorEO"
            android:background="@null"/>
        <View
            style="@style/view_style"
            android:layout_alignParentBottom="true"
            />
    </RelativeLayout>

    <Button
        android:id="@+id/login_bt"
        style="@style/btnStyle"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginLeft="10dip"
        android:layout_marginRight="10dip"
        android:layout_marginTop="50dp"
        android:text="@string/login"
        android:textSize="25dp"
        android:textColor="@color/white"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginTop="15dp"
        android:orientation="horizontal">
        <RelativeLayout

            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">
            <TextView
                android:id="@+id/regiest_tv"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/regiest"
                android:gravity="center"
                android:textSize="22dp"
                android:layout_centerInParent="true"

                />
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">
            <TextView
                android:id="@+id/find_pwd_tv"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/find_pwd"
                android:gravity="center"
                android:textSize="22dp"
                android:layout_centerInParent="true"
                />
        </RelativeLayout>
    </LinearLayout>
</LinearLayout>