<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/background_color">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/green">
        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorPrimaryRed"
            android:minHeight="?attr/actionBarSize">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="80dp"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:onClick="goBack">
                    <ImageView
                        android:id="@+id/topLeftBtn"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="5dp"
                        android:background="@drawable/goback"

                        android:textColor="#FFFFFF"/>
                </LinearLayout>
                <TextView
                    android:id="@+id/title_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:textSize="25sp"
                    android:layout_centerInParent="true"
                    android:text="重置密码"
                    />

            </RelativeLayout>


        </android.support.v7.widget.Toolbar>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginTop="10dip"
        android:background="@color/white">

        <ImageView
            android:id="@+id/phone_iv"
            style="@style/txtDefaultStyle"
            android:layout_width="80dp"
            android:layout_height="70dp"
            android:layout_centerVertical="true"
            android:src="@drawable/phone"/>

        <EditText
            android:id="@+id/edtPhone"
            style="@style/editPhoneStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_toRightOf="@id/phone_iv"
            android:background="@null"
            android:hint="@string/phone_hint" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginTop="4dip"
        android:background="@color/white">

        <ImageView
            android:id="@+id/code_iv"
            style="@style/txtDefaultStyle"
            android:layout_width="80dp"
            android:layout_height="70dp"
            android:layout_centerVertical="true"
            android:src="@drawable/invite_code"/>

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/frameLayout">

        </FrameLayout>

        <EditText
            android:id="@+id/edtCode"
            style="@style/editCodePStyle"
            android:layout_width="match_parent"
            android:layout_height="51dp"
            android:layout_gravity="center_vertical"
            android:hint="@string/code_hint"
            android:layout_alignParentBottom="true"
            android:layout_toEndOf="@+id/code_iv"
            android:layout_toRightOf="@+id/code_iv"
            android:background="@null"/>

        <bc.juhaohd.com.ui.view.TimerButton
            android:id="@+id/find_pwd_btnGetCode"
            style="@style/btnCodeStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right|center_vertical"
            android:hint="@string/code_get_hint"
            android:text="@string/code_get"
            android:textColor="@color/white"
            android:layout_marginRight="21dp"
            android:layout_marginEnd="21dp"
            android:layout_centerVertical="true"
            android:layout_alignRight="@+id/edtCode"
            android:layout_alignEnd="@+id/edtCode" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginTop="4dip"
        android:background="@color/white">

        <ImageView
            android:id="@+id/pwd_iv"
            style="@style/txtDefaultStyle"
            android:layout_width="80dp"
            android:layout_height="70dp"
            android:layout_centerVertical="true"
            android:src="@drawable/pwd"/>

        <EditText
            android:id="@+id/edPwd"
            style="@style/editPwdStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:inputType="textPassword"
            android:digits="@string/digits_password"
            android:layout_toRightOf="@id/pwd_iv"
            android:hint="@string/pwd_new_hint"
            android:background="@null"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginTop="4dip"
        android:background="@color/white">

        <ImageView
            android:id="@+id/pwd02_iv"
            style="@style/txtDefaultStyle"
            android:layout_width="80dp"
            android:layout_height="70dp"
            android:layout_centerVertical="true"
            android:src="@drawable/affirmpwd"/>

        <EditText
            android:id="@+id/edtAffirmPwd"
            style="@style/editPwdStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:inputType="textPassword"
            android:digits="@string/digits_password"
            android:layout_toRightOf="@id/pwd02_iv"
            android:background="@null"
            android:hint="@string/login_pwd_affirm_hint" />
    </RelativeLayout>

    <Button
        android:id="@+id/find_pwd_btnConfirm"
        style="@style/btnStyle"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginLeft="10dip"
        android:layout_marginRight="10dip"
        android:layout_marginTop="70dp"
        android:text="@string/find_pwd_btn"
        android:textSize="25dp"
        android:textColor="@color/white"/>
</LinearLayout>