<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/bg_home"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
    <TextView

        android:id="@+id/et_search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/setting"
        android:textColor="#ffffff"
        android:layout_margin="@dimen/xx60"
        android:textSize="@dimen/ss48"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/xx420"
        android:layout_marginRight="@dimen/xx420"
        android:background="@drawable/bg_corner_white_full_10"
        android:orientation="vertical">
        <RelativeLayout
            android:id="@+id/cache_rl"
            style="@style/mine_item_style02"
            android:layout_marginTop="@dimen/xx10"
            >
            <TextView
                android:id="@+id/cache_title_tv"
                style="@style/mine_text_style02"
                android:text="@string/cleancache"/>
            <TextView
                android:id="@+id/cache_tv"
                style="@style/mine_text_style03"
                />
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/about_rl"
            style="@style/mine_item_style02"
            android:layout_marginTop="@dimen/xx10"
            >
            <TextView
                android:id="@+id/about_title_tv"
                style="@style/mine_text_style02"
                android:text="系统信息"/>
            <ImageView
                android:id="@+id/type_iv"
                style="@style/mine_image_arrow"
                android:layout_alignParentRight="true"/>
        </RelativeLayout>
        <View
            style="@style/view_style"
            />

        <Button
            android:id="@+id/outlogin_bt"
            style="@style/btnStyle"
            android:layout_width="match_parent"
            android:layout_height="@dimen/xx100"
            android:layout_marginTop="@dimen/xx50"
            android:text="@string/out_login"
            android:textSize="@dimen/ss36"
            android:textColor="@color/white"/>
    </LinearLayout>
    </LinearLayout>
    <ImageView
        android:id="@+id/topLeftBtn"
        android:layout_width="@dimen/xx120"
        android:layout_height="@dimen/xx120"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginRight="@dimen/xx60"
        android:layout_marginBottom="@dimen/xx90"
        android:background="@mipmap/share_iv"
        android:onClick="goBack"
        />
</RelativeLayout>